# beat-storage

./: .gitignore  CaddyfileDev  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml  run.py
backend/src/: asgi.py  wsgi.py
backend/src/app/authentication/: deps.py  secure.py
backend/src/config/: base.py  base_schema.py  core.py  ldap.py
backend/src/domain/beats/: admin.py  apps.py  models.py  schemas.py
backend/src/domain/beats/migrations/: 0001_initial.py  0002_category_is_hidden_alter_beat_name_alter_beat_tags.py
backend/src/domain/employees/: admin.py  apps.py  forms.py  models.py
backend/src/domain/employees/migrations/: 0001_initial.py
backend/src/presentation/api/: routres.py  schemas.py
backend/src/presentation/api/endpoints/: beats.py
